--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Creative Studio</title>
     <!-- font icons -->
-    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+    <!-- <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
     <!-- css file -->
     <link rel="stylesheet" href="design 4.css">
 </head>
@@ -112,19 +114,19 @@
                 </div>
                 <div class="we-see-card-big">
                     <div class="we-see-card-small r-anmation">
-                        <i class="ti-notepad"></i>
+                        <i class="fa-solid fa-notes-medical"></i>
                         <h4>Planning</h4>
                     </div>
                     <div class="we-see-card-small l-anmation">
-                        <i class="ti-layout"></i>
+                    <i class="fa-solid fa-play"></i>  
                         <h4>Mockup</h4>
                     </div>
                     <div class="we-see-card-small r-anmation">
-                        <i class="ti-filter"></i>
+                    <i class="fa-solid fa-filter"></i>
                         <h4>Develope</h4>
                     </div>
                     <div class="we-see-card-small l-anmation">
-                        <i class="ti-thumb-up"></i>
+                        <i class="fa-solid fa-thumbs-up"></i>
                         <h4>Provide</h4>
                     </div>
                 </div>
@@ -206,8 +208,8 @@
                     <div class="text-portofilio-img">
                         <div class="text-portofilio-img-cont">
                             <h2>Project Title </h2>
-                            <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a> <a href="javascript:void(0)"><i
-                                    class="ti-link"></i></a>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-magnifying-glass-minus"></i></a> <a
+                                href="javascript:void(0)"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -218,10 +220,8 @@
                     <div class="text-portofilio-img">
                         <div class="text-portofilio-img-cont">
                             <h2>Project Title </h2>
-                            <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-
-                            <a href="javascript:void(0)"><i class="ti-link"></i></a>
-                            <i class="ti-zoom-in"></i>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-magnifying-glass-minus"></i></a>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -232,8 +232,8 @@
                     <div class="text-portofilio-img">
                         <div class="text-portofilio-img-cont">
                             <h2>Project Title </h2>
-                            <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                            <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-magnifying-glass-minus"></i></a>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -244,8 +244,8 @@
                     <div class="text-portofilio-img">
                         <div class="text-portofilio-img-cont">
                             <h2>Project Title </h2>
-                            <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a> <a href="javascript:void(0)"><i
-                                    class="ti-link"></i></a>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-magnifying-glass-minus"></i></a> <a
+                                href="javascript:void(0)"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -256,8 +256,8 @@
                     <div class="text-portofilio-img">
                         <div class="text-portofilio-img-cont">
                             <h2>Project Title </h2>
-                            <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a> <a href="javascript:void(0)"><i
-                                    class="ti-link"></i></a>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-magnifying-glass-minus"></i></a> <a
+                                href="javascript:void(0)"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -268,8 +268,8 @@
                     <div class="text-portofilio-img">
                         <div class="text-portofilio-img-cont">
                             <h2>Project Title </h2>
-                            <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a> <a href="javascript:void(0)"><i
-                                    class="ti-link"></i></a>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-magnifying-glass-minus"></i></a> <a
+                                href="javascript:void(0)"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -295,10 +295,10 @@
                     </h3>
                 </div>
                 <div class="team-card-icon">
-                    <a href="javascript:void(0)"><i class="ti-facebook"></i> </a>
-                    <a href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-dropbox"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-facebook"></i> </a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-github"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-dropbox"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
             <div class="team-card">
@@ -310,10 +310,10 @@
                     <h3>CEO</h3>
                 </div>
                 <div class="team-card-icon">
-                    <a href="javascript:void(0)"><i class="ti-facebook"></i> </a>
-                    <a href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-dropbox"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-facebook"></i> </a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-github"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-dropbox"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
             <div class="team-card">
@@ -325,10 +325,10 @@
                     <h3>FOUNDER</h3>
                 </div>
                 <div class="team-card-icon">
-                    <a href="javascript:void(0)"><i class="ti-facebook"></i> </a>
-                    <a href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-dropbox"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-facebook"></i> </a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-github"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-dropbox"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
             <div class="team-card">
@@ -341,10 +341,10 @@
                     <h3>App Designer</h3>
                 </div>
                 <div class="team-card-icon">
-                    <a href="javascript:void(0)"><i class="ti-facebook"></i> </a>
-                    <a href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-dropbox"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-facebook"></i> </a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-github"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-dropbox"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
             <div class="team-card">
@@ -357,10 +357,10 @@
                     </h3>
                 </div>
                 <div class="team-card-icon">
-                    <a href="javascript:void(0)"><i class="ti-facebook"></i> </a>
-                    <a href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-dropbox"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-facebook"></i> </a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-github"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-dropbox"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
             <div class="team-card">
@@ -373,10 +373,10 @@
                     </h3>
                 </div>
                 <div class="team-card-icon">
-                    <a href="javascript:void(0)"><i class="ti-facebook"></i> </a>
-                    <a href="javascript:void(0)"><i class="ti-github"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-dropbox"></i></a>
-                    <a href="javascript:void(0)"><i class="ti-twitter"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-facebook"></i> </a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-github"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-dropbox"></i></a>
+                    <a href="javascript:void(0)"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
         </div>
@@ -395,8 +395,8 @@
                 <div class="blog-card">
                     <img src="blog-1.jpg" alt="---">
                     <div class="details ">
-                        <a href="javascript:void(0)"><i class="ti-comments"></i> 123</a>
-                        <a href="javascript:void(0)"><i class="ti-eye"></i> 123</a>
+                        <a href="javascript:void(0)"><i class="fa-solid fa-comment"></i> 123</a>
+                        <a href="javascript:void(0)"><i class="fa-solid fa-eye"></i>123</a>
                     </div>
                     <div class="blog-text">
                         <h2>Laboriosam asperiores</h2>
@@ -410,8 +410,8 @@
                 <div class="blog-card">
                     <img src="blog-2.jpg" alt="---">
                     <div class="details ">
-                        <a href="javascript:void(0)"><i class="ti-comments"></i> 523</a>
-                        <a href="javascript:void(0)"><i class="ti-eye"></i> 323</a>
+                        <a href="javascript:void(0)"><i class="fa-solid fa-comment"></i> 523</a>
+                        <a href="javascript:void(0)"><i class="fa-solid fa-eye"></i>323</a>
                     </div>
                     <div class="blog-text">
                         <h2>Repudiandae laudantium</h2>
@@ -425,8 +425,8 @@
                 <div class="blog-card">
                     <img src="blog-3.jpg" alt="---">
                     <div class="details ">
-                        <a href="javascript:void(0)"><i class="ti-comments"></i> 723</a>
-                        <a href="javascript:void(0)"><i class="ti-eye"></i> 223</a>
+                        <a href="javascript:void(0)"><i class="fa-solid fa-comment"></i> 723</a>
+                        <a href="javascript:void(0)"><i class="fa-solid fa-eye"></i>223</a>
                     </div>
                     <div class="blog-text">
                         <h2> Possimus aliquam veniam</h2>
@@ -534,12 +534,12 @@
                         <p><i class="ti-email"></i> info@website.com</p>
                     </div>
                     <div class="footer-social-links">
-                        <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
-                        <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
-                        <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
-                        <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
-                        <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
-                        <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
+                        <a href="javascript:void(0)" class="link"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="javascript:void(0)" class="link"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="javascript:void(0)" class="link"><i class="fa-brands fa-google"></i></a>
+                        <a href="javascript:void(0)" class="link"><i class="fa-brands fa-pinterest"></i></a>
+                        <a href="javascript:void(0)" class="link"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="javascript:void(0)" class="link"><i class="fa-solid fa-rss"></i></a>
                     </div>
                 </div>
 
